--- a/index.html
+++ b/index.html
@@ -15,77 +15,8 @@
   <title>Landing title</title>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-nav">
-          <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="assets/images/Component2.svg" alt="Larrarte"></a>
-  <!--           <div class="left"> -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inversiones</a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <div class="grid-menu">
-                          <div class="imenu"><span class="dropdown-item" href="#">
-                            <div class="mimg">
-                              <img src="assets/images/menu1.png" alt="Larrarte">
-                            </div>
-                            <div class="mtext">
-                              <h6>PGA<br><strong>Rentabilidad<br>asegurada</strong> hasta 10% anual</h6>
-                              <a href="#">Conocé más</a>
-                            </div>
-                          </span></div>
-                          <div class="imenu"><span class="dropdown-item" href="#">
-                            <div class="mimg">
-                              <img src="assets/images/menu3.png" alt="Larrarte">
-                            </div>
-                            <div class="mtext">
-                              <h6>Forestales<br><strong>Rentabilidad<br></strong>de 7% a 12%<br>anual</h6>
-                              <a href="#">Conocé más</a>
-                            </div>
-                          </span></div>
-                          <div class="imenu"><span class="dropdown-item" href="#">
-                            <div class="mimg">
-                              <img src="assets/images/menu2.png" alt="Larrarte">
-                            </div>
-                            <div class="mtext">
-                              <h6><strong>Negocios Ganaderosz<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
-                              <a href="#">Conocé más</a>
-                            </div>
-                          </span></div>
-                          <div class="imenu"><span class="dropdown-item" href="#">
-                            <div class="mimg">
-                              <img src="assets/images/menu4.png" alt="Larrarte">
-                            </div>
-                            <div class="mtext">
-                              <h6><strong>Negocios Inmobiliarios<br></strong> hasta 9% anual<br>larrarteurbano.com.uy</h6>
-                              <a href="#">Conocé más</a>
-                            </div>
-                          </span></div>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Soy inversor</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                  </ul>
-                </div>
-           <!--    </div> -->
-          </nav>
-        </div>
-      </div>
-    </div>
+  <header id="header">
+
   </header>
   <section id="image-carousel">
     <div class="owl-carousel owl-theme">
