--- a/PGA.html
+++ b/PGA.html
@@ -16,76 +16,46 @@
 </head>
 <body>
   <header id="header"></header>
-  <section id="image-carousel">
-    <div class="owl-carousel owl-theme">
-      <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte">
-        <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br class="d-none d-md-block"> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
-        </div>
-      </div>
-      <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
-        <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
-        </div>
-      </div>
-      <div class="item">
-        <img src="assets/images/header.png" alt="Larrarte" class="w-100%">
-        <div class="titleCarousel">
-          <h1 class="display-4">Hacé crecer tu capital<br> con rentabilidad asegurada</h1>
-          <h1 class="mb-md-5 mb-sm-3">Hasta 10% anual</h1>
-          <a href="#" class="btn btn-primary">Conocer más</a>
+  <section id="image-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>Programa Ganadero Artigas</h1>
+          <h1 class="display-4"><strong>Una forma segura de <br class="d-none d-md-block">invertir</strong></h1>
         </div>
       </div>
     </div>
   </section>
-  <section id="group">
+  <section id="dynamic-table">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <img src="assets/images/group-larrarte.svg" alt="Larrarte">
-          <h2 class="mt-5 mb-3" style="font-weight: 700">Potenciando al inversor uruguayo desde 1995</h2>
-          <h5 style="font-weight: 400">Grupo Larrarte es una empresa dedicada a la Administración de fondos de Inversión y Capitales en <br class="d-none d-lg-block">general con más de 25 años de experiencia en el mercado. Ofrecemos soluciones a pequeños, medianos<br class="d-none d-lg-block"> y grandes inversores para diversificar y hacer crecer su capital a través de mecanismos de inversión <br class="d-none d-lg-block">sólidos, transparentes y seguros.</h5>
+          <h5>Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
       </div>
     </div>
   </section>
-  <section id="are-have">
+  <section id="scheme">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="gif">
-            <div class="item">
-              <img src="assets/images/certificacion.svg" alt="Larrarte" class="certificacion">
-              <h4>25 años <br>de experiencia</h4>
-            </div>
-            <div class="item">
-              <img src="assets/images/acuerdo.svg" alt="Larrarte" class="acuerdo">
-              <h4>Más de 1.000 <br>inversores</h4>
-            </div>
-            <div class="item">
-              <img src="assets/images/granero.svg" alt="Larrarte" class="granero">
-              <h4>3 cabañas <br>propias</h4>
-            </div>
-            <div class="item">
-              <img src="assets/images/bosque1.svg" alt="Larrarte" class="bosque1">
-              <h4>25.000 hás <br>de producción</h4>
-            </div>
-            <div class="item">
-              <img src="assets/images/vaca.svg" alt="Larrarte" class="vaca">
-              <h4>+20.000 cabezas <br>de Brangus</h4>
-            </div>
-            <div class="item">
-              <img src="assets/images/Outline.svg" alt="Larrarte" class="Outline">
-              <h4>+15.000 cabezas <br>de Texel</h4>
-            </div>
+         <h1 class="display-5">Esquema de trabajo</h1>
+        </div>
+        <div class="col-12">
+          <div class="gridscheme">
+            <div class="item"><h1 class="display-1">1</h1></div>
+            <div class="item"><h5>Te registramos como inversor <!-- <br class="d-none d-md-block"> -->ante DICOSE y SNIG.</h5></div>
+            <div class="item"><h1 class="display-1">2</h1></div>
+            <div class="item"><h5>Armamos un plan de <!-- <br class="d-none d-md-block"> -->inversión personalizado <!-- <br class="d-none d-md-block"> -->según tus intereses</h5></div>
+            <div class="item"><h1 class="display-1">3</h1></div>
+            <div class="item"><h5>Fijamos una rentabilidad <!-- <br class="d-none d-md-block"> -->fija anual acorde a tu <!-- <br class="d-none d-md-block"> -->inversión</h5></div>
+            <div class="item"><h1 class="display-1">4</h1></div>
+            <div class="item"><h5>Cerramos la venta del <!-- <br class="d-none d-md-block"> -->ganado que estás <!-- <br class="d-none d-md-block"> -->adquiriendo como inversión</h5></div>
+            <div class="item"><h1 class="display-1">5</h1></div>
+            <div class="item"><h5>Firmamos un contrato de <!-- <br class="d-none d-md-block"> -->administración</h5></div>
+            <div class="item"><h1 class="display-1">6</h1></div>
+            <div class="item"><h5>Acordamos en conjunto el <!-- <br class="d-none d-md-block"> -->ciclo de tiempo del negocio <!-- <br class="d-none d-md-block"> -->y retorno del capital</h5></div>
           </div>
-
         </div>
       </div>
     </div>
