--- a/PGA.html
+++ b/PGA.html
@@ -30,8 +30,93 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h5>Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
+          <h5 class="mb-5">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
+<!-- <div class="owl-carousel owl-theme owl"> -->
+        <div class="col-lg-3 col-left item">
+
+            <div class="card" style="width: 18rem;">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item list1">
+                  <img src="assets/images/Icon-money.svg" alt="Larrarte">
+                  Inversión mínima
+                </li>
+                <li class="list-group-item list1">
+                  <img src="assets/images/Icon-calendar.svg" alt="Larrarte">
+                  Plazo de la inversión
+                </li>
+                <li class="list-group-item list1">
+                  <img src="assets/images/Icon-bank.svg" alt="Larrarte">
+                  Cobro de la renta
+                </li>
+                <li class="list-group-item list1">
+                  <img src="assets/images/Icon-open.svg" alt="Larrarte">
+                  Recuperación del capital
+                </li>
+              </ul>
+            </div>
+            <h6 style="color: #373948">Todas las categorías cuentan con una <br>disponibilidad total de la inversión</h6>
+          </div>
+
+        <div class="col-lg-3 col-right item">
+          <div class="card" style="text-align: center;">
+            <div class="card-header" style="background-color: #0B422F">
+              <h4 style="color: #FFFFFF">Categoría<br>Cría</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <h1 style="color: #0B422F">4,2% al 8.5%</h1>
+                <h4 style="color: #0B422F">Renta Fija Anual</h4>
+              </li>
+              <li class="list-group-item">USD 15.000</li>
+              <li class="list-group-item">18 meses</li>
+              <li class="list-group-item">Final del contrato</li>
+              <li class="list-group-item">Final del contrato</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Me interesa</a>
+        </div>
+
+        <div class="col-lg-3 col-right item">
+          <div class="card" style="text-align: center;">
+            <div class="card-header" style="background-color: #0B422F">
+              <h4 style="color: #FFFFFF">Categoría<br>Re-cría</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <h1 style="color: #0B422F">4,2% al 8.5%</h1>
+                <h4 style="color: #0B422F">Renta Fija Anual</h4>
+              </li>
+              <li class="list-group-item">USD 15.000</li>
+              <li class="list-group-item">18 meses</li>
+              <li class="list-group-item">Cada 6 a 12 meses</li>
+              <li class="list-group-item">Final del contrato</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Me interesa</a>
+        </div>
+
+        <div class="col-lg-3 col-right item">
+          <div class="card" style="text-align: center;">
+            <div class="card-header" style="background-color: #0B422F">
+              <h4 style="color: #FFFFFF">Categoría<br>Gordo e invernada</h4>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <h1 style="color: #0B422F">9%</h1>
+                <h4 style="color: #0B422F">Renta Fija Anual</h4>
+              </li>
+              <li class="list-group-item">USD 30.000</li>
+              <li class="list-group-item">18 meses</li>
+              <li class="list-group-item">Cada 45 días</li>
+              <li class="list-group-item">Final del contrato</li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Me interesa</a>
+        </div>
+
+<!-- </div> -->
+
       </div>
     </div>
   </section>
@@ -223,6 +308,12 @@
   <section id="managementII"></section>
   <section id="contact"></section>
   <footer id="footer"></footer>
+<!-- <script>
+    function table(){
+      $(".owl-table").addClass("active")
+
+    }
+  </script> -->
 <script type="text/javascript" src="assets/lib/jquery.min.js"></script>
 <script type="text/javascript" src="assets/lib/bootstrap/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="assets/lib/owl-carousel/owl-carousel.min.js"></script>
