--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <section id="investment">
     <div class="container-fluid p-5">
       <div class="row justify-content-center">
-        <h2 class="mb-5" style="color: #373948; font-weight: 700">Te ofrecemos diferentes mecanismos de inversión para <br>diversificar tu capital</h2>
+        <h2 class="mb-5" style="color: #373948">Te ofrecemos diferentes mecanismos de inversión para <br>diversificar tu capital</h2>
         <div class="col-12 grid-investment">
           <div class="PGA investment">
             <div class="itop">
@@ -101,7 +101,7 @@
               <h5>Programa Ganadero Artigas</h5>
             </div>
             <div class="ibottom">
-              <h3 class="mb-4">Rentabilidad asegurada <br>del 8 a 10% anual</h3>
+              <h3>Rentabilidad asegurada <br>del 8 a 10% anual</h3>
             </div>
             <a href="#" class="btn btn-primary">Conocer más</a>
           </div>
@@ -111,7 +111,7 @@
               <h5>Inversiones en campos forestados<br> para producción de celulosa.</h5>
             </div>
             <div class="ibottom">
-              <h3 class="mb-4">Rentabilidad del<br> 7 a 12% anual</h3>
+              <h3>Rentabilidad del<br> 7 a 12% anual</h3>
             </div>
             <a href="#" class="btn btn-primary">Conocer más</a>
           </div>
@@ -121,7 +121,7 @@
               <h5>Fideicomisos y desarrollos <br>inmobiliarios</h5>
             </div>
             <div class="ibottom">
-              <h3 class="mb-4">Rentabilidad hasta<br> del 9% anual</h3>
+              <h3>Rentabilidad hasta<br> del 9% anual</h3>
             </div>
             <a href="#" class="btn btn-primary">Conocer más</a>
           </div>
@@ -130,7 +130,6 @@
     </div>
   </section>
   <section id="managementI">
-<!--     <img src="assets/images/fondo.jpg" alt="Larrarte"> -->
     <div class="container c-management">
       <div class="row">
         <div class="col-12 managementI">
