--- a/PGA.html
+++ b/PGA.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h5 class="mb-5">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
+          <h5 class="mb-5 text-center">Nuestro Programa Ganadero Artigas se encuentra activo desde 2016, formando núcleos de pequeños, medianos y grandes inversores y ahorristas que buscan generar una renta fija y segura con su capital. Actualmente contamos con más de 1.000 inversores nacionales y extranjeros y más de 25.000 hectáreas de producción en Tacuarembó, Artigas, Rivera y Salto.</h5>
         </div>
 <!-- <div class="owl-carousel owl-theme owl"> -->
         <div class="col-lg-3 col-left item">
@@ -38,24 +38,40 @@
             <div class="card" style="width: 18rem;">
               <ul class="list-group list-group-flush">
                 <li class="list-group-item list1">
-                  <img src="assets/images/Icon-money.svg" alt="Larrarte">
-                  Inversión mínima
+                  <div class="img-list">
+                    <img src="assets/images/Icon-money.svg" alt="Larrarte">
+                  </div>
+                  <div class="text-list">
+                    <p class="h5 mb-0 py-2">Inversión mínima</p>
+                  </div>
                 </li>
                 <li class="list-group-item list1">
-                  <img src="assets/images/Icon-calendar.svg" alt="Larrarte">
-                  Plazo de la inversión
+                  <div class="img-list">
+                    <img src="assets/images/Icon-calendar.svg" alt="Larrarte">
+                  </div>
+                  <div class="text-list">
+                    <p class="h5 mb-0 py-2">Plazo de la inversión</p>
+                  </div>
                 </li>
                 <li class="list-group-item list1">
-                  <img src="assets/images/Icon-bank.svg" alt="Larrarte">
-                  Cobro de la renta
+                  <div class="img-list">
+                    <img src="assets/images/Icon-bank.svg" alt="Larrarte">
+                  </div>
+                  <div class="text-list">
+                    <p class="h5 mb-0 py-2">Cobro de la renta</p>
+                  </div>
                 </li>
                 <li class="list-group-item list1">
-                  <img src="assets/images/Icon-open.svg" alt="Larrarte">
-                  Recuperación del capital
+                  <div class="img-list">
+                    <img src="assets/images/Icon-open.svg" alt="Larrarte">
+                  </div>
+                  <div class="text-list">
+                    <p class="h5 mb-0 py-2">Recuperación del capital</p>
+                  </div>
                 </li>
               </ul>
             </div>
-            <h6 style="color: #373948">Todas las categorías cuentan con una <br>disponibilidad total de la inversión</h6>
+            <h6 style="color: #373948; font-weight: 700">Todas las categorías cuentan con una <br>disponibilidad total de la inversión</h6>
           </div>
 
         <div class="col-lg-3 col-right item">
@@ -68,10 +84,10 @@
                 <h1 style="color: #0B422F">4,2% al 8.5%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
-              <li class="list-group-item">USD 15.000</li>
-              <li class="list-group-item">18 meses</li>
-              <li class="list-group-item">Final del contrato</li>
-              <li class="list-group-item">Final del contrato</li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">USD 15.000</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">18 meses</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
           <a href="#" class="btn btn-primary">Me interesa</a>
@@ -87,10 +103,10 @@
                 <h1 style="color: #0B422F">4,2% al 8.5%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
-              <li class="list-group-item">USD 15.000</li>
-              <li class="list-group-item">18 meses</li>
-              <li class="list-group-item">Cada 6 a 12 meses</li>
-              <li class="list-group-item">Final del contrato</li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">USD 15.000</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">18 meses</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Cada 6 a 12 meses</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
           <a href="#" class="btn btn-primary">Me interesa</a>
@@ -106,10 +122,10 @@
                 <h1 style="color: #0B422F">9%</h1>
                 <h4 style="color: #0B422F">Renta Fija Anual</h4>
               </li>
-              <li class="list-group-item">USD 30.000</li>
-              <li class="list-group-item">18 meses</li>
-              <li class="list-group-item">Cada 45 días</li>
-              <li class="list-group-item">Final del contrato</li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">USD 30.000</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">18 meses</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Cada 45 días</p></li>
+              <li class="list-group-item"><p class="h5 mb-0 py-2">Final del contrato</p></li>
             </ul>
           </div>
           <a href="#" class="btn btn-primary">Me interesa</a>
